corrected two scrollbars y-axis

--- a/src/components/BackgroundDrop/BackgroundDrop.css
+++ b/src/components/BackgroundDrop/BackgroundDrop.css
@@ -12,6 +12,10 @@
     top: 35rem;
 }
 
+.row-card {
+    overflow-y: hidden;
+}
+
 
 .background::after {
     content: '';
